Aula CSS parte2 - aula 2
Responsividade e Projeto prático.

--- a/03_CSS_pt_2/02_position.html
+++ b/03_CSS_pt_2/02_position.html
@@ -19,7 +19,7 @@
             position: fixed - fixa o elemento na tela.
             position: sticky - age como um adesivo, fixa o elemento só onde eu determinar.
             position: relative - posição relativa a posição inicial dele
-            position: absolute - posição absoluta(fixa) a algum elemento ou página.
+            position: absolute - posição absoluta a algum elemento ou página.
                                     - Se não tive pai / pai for static -> Posiciona referente a página
                                     - Se o pai não for static -> Posiciona referência ao pai. 
             
