--- a/04_JavaScript/Parte_02/projeto-conversor-moeda/index.html
+++ b/04_JavaScript/Parte_02/projeto-conversor-moeda/index.html
@@ -22,34 +22,35 @@
 
         <label>
             Converter <b>para</b>
-            <select>
-                <option>US$ Dólar americano</option>
-                <option>€ Euro</option>
+            <select class="currency-select">
+                <option value="dolar">US$ Dólar americano</option>
+                <option value="euro">€ Euro</option>
             </select>
         </label>
 
         <label>
-            <input placeholder="R$ 10.000,00">
+            <input class="input-currency" placeholder="R$ 10.000,00">
         </label>
 
-        <button>Converter</button>
+        <button class="convert-button">Converter</button>
 
         <section>
-            <div>
+            <div class="currency-box">
                 <img src="./assets/real.png" alt="logo-moeda-real">
-                <p>Real</p>
-                <p>R$ 0,00</p>
+                <p class="currency">Real</p>
+                <p class="currency-value-to-convert">R$ 0,00</p>
             </div>
 
-            <img src="./assets/arrow.png" alt="seta">
+            <img class="arrow-img" src="./assets/arrow.png" alt="seta">
 
-            <div>
-                <img src="./assets/dolar.png" alt="logo-moeda-dolar">
-                <p>Dólar</p>
-                <p>US$ 0,00</p>
+            <div class="currency-box">
+                <img class="currency-img" src="./assets/dolar.png" alt="logo-moeda-dolar">
+                <p class="currency" id="currency-name">Dólar</p>
+                <p class="currency-value">US$ 0,00</p>
             </div>
         </section>
     </main>
-    
+   
 </body>
+<script src="./script.js"></script>
 </html>
